--- a/client/src/style/print.css
+++ b/client/src/style/print.css
@@ -7,21 +7,14 @@
         line-height: 1.3 !important;
         background: #ffffff !important;
         color: #000 !important;
+        float: none;
     }
-    .main {
-        width: 100% !important;
-        margin: 1rem !important;
-    }
-    .no-print {
-        display: none !important;
-    }
-    
+
     h1, h2 {
+        page-break-before: always;
         font-size: 24pt !important;
-        page-break-before: always !important;
-        break-before: always !important;
     }
-    
+
     h2, h3, h4 {
         font-size: 16pt !important;
         margin-top: 25px !important;
@@ -32,15 +25,30 @@
         page-break-inside: avoid !important; 
         page-break-after: avoid !important; 
     }
-    .break-page {
+
+    table { 
         page-break-inside: avoid !important;
         break-inside: avoid;
         box-decoration-break: clone;
     }
-    table { 
-        /* page-break-inside: avoid !important;
-        break-inside: avoid;
-        box-decoration-break: clone; */
+
+    .reset-float {
+        float: none !important;
+    }
+
+    .main {
+        width: 100% !important;
+        margin: 1rem !important;
+    }
+
+    .no-print {
+        display: none !important;
+    }
+
+    div.page-break {
+        /* page-break-after: always; */
+        display: block !important;
+        width: 1000% !important;
     }
     
     .entry:after {
